--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "chance": "^1.1.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "react-toastify": "^8.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
